fix alignment of contact us side button

--- a/css/slider.css
+++ b/css/slider.css
@@ -41,6 +41,7 @@ body { overflow-x:hidden; }
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     cursor:pointer;
+    padding:0;
 }
 #contact-slider-sidebar:focus,
 #contact-slider-sidebar1:focus {
